add time analysis